agrego aninacion al h2

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Luxurious+Roman&family=The+Nautigal:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body>
     <div class="grid-container">
@@ -29,7 +33,7 @@
             </div>
         </header>
         <main class="info__importante">
-            <h2>TALLER DE CHAPA Y PINTURA</h2>
+            <h2 class="animate__animated animate__bounceInRight">TALLER DE CHAPA Y PINTURA</h2>
             <H3>Somos una empresa familiar en el mercado del Automotor </H3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam deserunt quam dignissimos non magni! Aperiam, quae error! Alias officiis, esse, reiciendis dolorem nostrum, cupiditate ducimus exercitationem animi nam est commodi. ipsum, dolor sit amet consectetur adipisicing elit. Id vero cumque minima quos culpa assumenda voluptas obcaecati necessitatibus fuga, sapiente sequi asperiores vel totam molestiae harum velit ullam, minus vitae?</p>
             
